--- a/index.html
+++ b/index.html
@@ -50,6 +50,26 @@
               </div>
             </div>
           </nav>
+
+          <div class="hero">
+            <div
+  class="hero"
+  style="background-image: url(img/hero.png);"
+  >
+  <div class="hero-overlay bg-opacity-60"></div>
+  <div class="hero-content text-neutral-content text-center">
+    <div class="md:py-44 py-24 max-w-full">
+      <h1 class="mb-5 xl:text-5xl lg:text-3xl text-2xl font-bold">We are a digital & branding agency based in London.</h1>
+      <p class="mb-5 lg:text-3xl text-xl font-bold">
+        We love to turn great ideas into beautiful products.
+      </p>
+      <button class="btnH btn btn-primary md:my-10 my-5">
+        <a href="#" class="uppercase">see Portfolio</a>
+      </button>
+    </div>
+  </div>
+</div>
+          </div>
           
         </div>
         
